# unitysvc-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml  publish.yml
src/unitysvc_mcp/: __init__.py  app_context.py  auth.py  commands.py  customer_context.py  introspect.py  models.py  render.py  seller_commands.py  seller_context.py  server.py  settings.py  unitysvc_client.py
src/unitysvc_mcp/clients/: __init__.py  _summary.py  customer.py  docs.py  seller.py
src/unitysvc_mcp/tools/: __init__.py  customer.py  docs.py  market.py  seller.py
tests/: test_auth.py  test_clients.py  test_commands.py  test_context.py  test_customer.py  test_customer_context.py  test_docs.py  test_modes.py  test_render.py  test_seller_commands.py  test_seller_context.py  test_unitysvc_client.py
