[project]
name = "unitysvc-mcp-server"
version = "0.1.0"
description = "UnitySVC MCP server starter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    # Official UnitySVC SDKs. Both ship async clients that take an explicit
    # api_key, so each MCP request can use its own caller's token rather than
    # a shared server-side credential.
    "unitysvc-py>=0.1.15",
    "unitysvc-sellers>=0.2.19",
    "mcp[cli]==2.0.0b1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
]

[project.scripts]
unitysvc-mcp-server = "unitysvc_mcp.server:main"

# `mcp[cli]` is pinned to a 2.0 beta while the server is a prototype; uv
# refuses to resolve pre-release versions unless told to.
[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.6,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project name (unitysvc-mcp-server) differs from the package dir
# (src/unitysvc_mcp), so hatchling can't infer what to ship.
[tool.hatch.build.targets.wheel]
packages = ["src/unitysvc_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
